--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 
 {
   "name": "kyne_Bot",
-  "logo": "https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSt6w-OsvARhJATiKlZ_PkcPWCpjFq_eUk1qBCs7L4Y_7Cj5b6S&usqp=CAU"
+  "logo": "https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSt6w-OsvARhJATiKlZ_PkcPWCpjFq_eUk1qBCs7L4Y_7Cj5b6S&usqp=CAU",
   "description": "kyne : A part of Project '3301'",
   "keywords": [
     "telegram",
